<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileTab">

    <TextView
        android:id="@+id/txtUserWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_server_displayName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_profile_name"
        android:layout_margin="@dimen/margin"
        android:textSize="@dimen/text_size"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUserWelcome" />

    <TextView
        android:id="@+id/txt_server_bio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_profile_bio"
        android:layout_margin="@dimen/margin"
        android:textSize="@dimen/text_size"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_server_displayName"/>

    <Button
        android:id="@+id/btnProfileUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/btnProfileUpdate"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_server_bio" />

    <LinearLayout
        android:id="@+id/llEditProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnProfileUpdate"
        android:visibility="gone">

        <EditText
            android:id="@+id/edtProfileDisplayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:textSize="@dimen/text_size"
            android:hint="@string/hint_profile_name"
            android:inputType="text"
            android:maxLength="100" />

        <EditText
            android:id="@+id/edtProfileBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:hint="@string/hint_profile_bio"
            android:inputType="text"
            android:maxLines="8"
            android:maxLength="2500"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/margin">

            <Button
                android:id="@+id/btnProfileSaveChanges"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin"
                android:textSize="@dimen/text_size"
                android:text="@string/btnProfileSave"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/btnProfileCancelChanges"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/btnProfileCancel"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnProfileLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/btnProfileLogout"
        android:textSize="@dimen/text_size"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/btnProfileUpdate" />

</androidx.constraintlayout.widget.ConstraintLayout>